--- a/K8s/my-app-deployment-feed.yaml
+++ b/K8s/my-app-deployment-feed.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-app
+  name: my-app-feed
   labels:
-    app: my-app
+    app: my-app-feed
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: my-app
+      app: my-app-feed
   template:
     metadata:
       labels:
-        app: my-app
+        app: my-app-feed
     spec:
       containers:
-      - name: udagram-api
-        image: ctala/udagram-api
+      - name: udagram-api-feed
+        image: ctala/udagram-api-feed
         imagePullPolicy: "Always"
         ports:
           - containerPort: 8080    
