--- a/K8s/my-app-user-svc.yaml
+++ b/K8s/my-app-user-svc.yaml
@@ -1,11 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app-svc
-  # labels:
-  #   run: my-app
+  name: my-app-user-svc
 spec:
-  # type: NodePort
   ports:
   - port: 8888
     protocol: TCP
