--- a/K8s/my-app-deployment-feed.yaml
+++ b/K8s/my-app-deployment-feed.yaml
@@ -41,3 +41,18 @@ spec:
             configMapKeyRef:
               name: cm-demo
               key: POSTGRES_DB
+        - name: JWT_SECRET
+          valueFrom:
+            configMapKeyRef:
+              name: cm-demo
+              key: JWT_SECRET               
+        - name: AWS_BUCKET
+          valueFrom:
+            configMapKeyRef:
+              name: cm-demo
+              key: AWS_BUCKET
+        - name: AWS_REGION
+          valueFrom:
+            configMapKeyRef:
+              name: cm-demo
+              key: AWS_REGION              
